# test-hatch-uv-actions

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
src/test_hatch_uv_actions/: __about__.py
tests/: __init__.py  test_do_something.py
