[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-hatch-uv-actions"
dynamic = ["version"]
description = 'test repo for using gh-actions with hatch and uv'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AntoineSalden", email = "t.p.w.salden@tue.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/AntoineSalden/test-hatch-uv-actions#readme"
Issues = "https://github.com/AntoineSalden/test-hatch-uv-actions/issues"
Source = "https://github.com/AntoineSalden/test-hatch-uv-actions"

[tool.hatch.version]
path = "src/test_hatch_uv_actions/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/test_hatch_uv_actions tests}"

[tool.coverage.run]
source_pkgs = ["test_hatch_uv_actions", "tests"]
branch = true
parallel = true
omit = [
  "src/test_hatch_uv_actions/__about__.py",
]

[tool.coverage.paths]
test_hatch_uv_actions = ["src/test_hatch_uv_actions", "*/test-hatch-uv-actions/src/test_hatch_uv_actions"]
tests = ["tests", "*/test-hatch-uv-actions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
