[build-system]
requires = ["hatchling", "hatch-vcs","hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "test-hatch-uv-actions"
dynamic = ["version"]
description = 'test repo for using gh-actions with hatch and uv'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AntoineSalden", email = "t.p.w.salden@tue.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["moose-spectra"]

[project.urls]
Documentation = "https://github.com/AntoineSalden/test-hatch-uv-actions#readme"
Issues = "https://github.com/AntoineSalden/test-hatch-uv-actions/issues"
Source = "https://github.com/AntoineSalden/test-hatch-uv-actions"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1dev"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.setuptools_scm]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/test_hatch_uv_actions tests}"

[tool.coverage.run]
source_pkgs = ["test_hatch_uv_actions", "tests"]
branch = true
parallel = true
omit = [
  "src/test_hatch_uv_actions/__about__.py",
]

[tool.coverage.paths]
test_hatch_uv_actions = ["src/test_hatch_uv_actions", "*/test-hatch-uv-actions/src/test_hatch_uv_actions"]
tests = ["tests", "*/test-hatch-uv-actions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-test.overrides]
matrix.feature.dependencies = [
  { value = "pandas==1.5.3", if = ["pandas-legacy"], python=["3.10"]},
  { value = "numpy<2.0", if = ["pandas-legacy"], python = ["3.10"] },
  { value = "pandas>=2.0.0", if = ["pandas-2.0"] },
  { value = "numpy>=2.0", if = ["pandas-2.0"] },
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9","3.10", "3.11"]
feature = ["pandas-legacy","pandas-2.0"]

[tool.uv]
cache-keys = [{ git = true }]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" }
]


[tool.hatch.envs.docs]
skip-install = true
features = ["docs"]

[tool.ruff]
line-length = 120
exclude = ["test", "docs/examples"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F","C4", "SIM", "TCH", "NPY", "PD","B","UP","D"]
ignore = ["PD901","F401"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D","F401"]